# rpi_pico_fakefire

./: .gitignore  CMakeLists.txt  README.md  globals.h  main.c  values.h  ws2811.pio
DFPlayer_library/: CMakeLists.txt  DFPlayerCommands.c  DFPlayerCommands.h
kicad/: fakefire.kicad_pcb  fakefire.kicad_pcb-bak  fakefire.kicad_prl  fakefire.kicad_pro  fakefire.kicad_sch  fakefire_v2.kicad_pcb  fakefire_v2.kicad_prl  fp-info-cache  fp-lib-table  sym-lib-table
nec_receive_library/: CMakeLists.txt  nec_receive.c  nec_receive.h
ws2811_library/: CMakeLists.txt  ws2811.c  ws2811.h  ws2811.pio
